--- a/python/src/EfficientGlobalOptimization_doc.i.in
+++ b/python/src/EfficientGlobalOptimization_doc.i.in
@@ -116,7 +116,7 @@ Updated minimum output value:  [-610..."
 
 Parameters
 ----------
-solver : :class:`~openturns.OptimizationSolver`
+solver : :class:`~openturns.OptimizationAlgorithm`
     The solver used to optimize the expected improvement"
 
 // ---------------------------------------------------------------------
@@ -126,7 +126,7 @@ solver : :class:`~openturns.OptimizationSolver`
 
 Returns
 -------
-solver : :class:`~openturns.OptimizationSolver`
+solver : :class:`~openturns.OptimizationAlgorithm`
     The solver used to optimize the expected improvement"
 
 // ---------------------------------------------------------------------
