--- a/python/src/GaussianLinearCalibration_doc.i.in
+++ b/python/src/GaussianLinearCalibration_doc.i.in
@@ -146,6 +146,6 @@ flag : bool
 
 Returns
 -------
-name : :class:`~openturns.String`
+name : str
     Name of least-squares method used for the resolution."
 
