--- a/python/src/ParetoFactory_doc.i.in
+++ b/python/src/ParetoFactory_doc.i.in
@@ -157,7 +157,7 @@ distribution : :class:`~openturns.Pareto`
 
 Notes
 -----
-Refer to :class:`~openturns.LeastSquaresFactory`.
+Refer to :class:`~openturns.LeastSquaresDistributionFactory`.
 
 Parameters
 ----------
