--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -53,6 +53,9 @@ todo_include_todos = True
 
 extensions.append('sphinx.ext.coverage')
 
+extensions.append('sphinx.ext.intersphinx')
+intersphinx_mapping = {'matplotlib': ('https://matplotlib.org/stable/', (None, 'matplotlib-objects.inv'))}
+
 extensions.append('sphinx.ext.imgmath')
 imgmath_latex_preamble = r'\usepackage{{{0}math_notations}}'.format(
     os.path.dirname(__file__) + os.sep)
