--- a/python/src/ApproximationAlgorithmImplementation_doc.i.in
+++ b/python/src/ApproximationAlgorithmImplementation_doc.i.in
@@ -3,16 +3,11 @@
 
 See also
 --------
-LeastSquaresStrategy, ApproximationAlgorithmImplementationFactory,
-LeastSquaresMetaModelSelectionFactory
+FunctionalChaosAlgorithm
+LeastSquaresStrategy
 
 Notes
 -----
-The ApproximationAlgorithm is built from an approximation algorithm
-implementation factory which is a
-:class:`~openturns.ApproximationAlgorithmImplementationFactory` or a
-:class:`~openturns.LeastSquaresMetaModelSelectionFactory`.
-
 This class is not usable because it has sense only within the
 :class:`~openturns.FunctionalChaosAlgorithm`."
 %enddef
