--- a/python/src/CrossEntropyResult_doc.i.in
+++ b/python/src/CrossEntropyResult_doc.i.in
@@ -7,7 +7,7 @@
     
 See also
 --------
-CrossEntropyImportanceSampling, PhysicalSpaceCrossEntropyImportanceSampling, StandardSpaceCrossEntropyImportanceSampling, SimulationResult"
+CrossEntropyImportanceSampling, PhysicalSpaceCrossEntropyImportanceSampling, StandardSpaceCrossEntropyImportanceSampling"
 
 
 // ---------------------------------------------------------------------------
