--- a/python/src/EventSimulation_doc.i.in
+++ b/python/src/EventSimulation_doc.i.in
@@ -34,8 +34,6 @@ events, and its derived classes provide dedicated algorithms:
 
 - :class:`~openturns.DirectionalSampling`
 
-- :class:`~openturns.LHS`,
-
 - :class:`~openturns.PostAnalyticalControlledImportanceSampling`,
 
 - :class:`~openturns.PostAnalyticalImportanceSampling`,
@@ -83,7 +81,10 @@ with a sample size :math:`> 2^{32}` by a combination of *blockSize* and
 
 see also
 --------
-setBlockSize, setMaximumOuterSampling, ResourceMap, SimulationResult"
+openturns.EventSimulation.setBlockSize
+openturns.EventSimulation.setMaximumOuterSampling
+openturns.ResourceMap
+openturns.SimulationResult"
 
 // ---------------------------------------------------------------------
 
