--- a/python/src/NormalityTest_doc.i.in
+++ b/python/src/NormalityTest_doc.i.in
@@ -18,7 +18,7 @@ testResult : :class:`~openturns.TestResult`
 
 See Also
 --------
-NormalityTest.CramerVonMisesNormal
+openturns.NormalityTest.CramerVonMisesNormal
 
 Notes
 -----
@@ -58,7 +58,7 @@ testResult : :class:`~openturns.TestResult`
 
 See Also
 --------
-NormalityTest.AndersonDarlingNormal
+openturns.NormalityTest.AndersonDarlingNormal
 
 Notes
 -----
