--- a/python/src/StudentCopulaFactory_doc.i.in
+++ b/python/src/StudentCopulaFactory_doc.i.in
@@ -22,7 +22,8 @@ the optimization step:
 
 See also
 --------
-DistributionFactory, StudentCopula
+openturns.DistributionFactory
+openturns.experimental.StudentCopula
 "
 
 // ---------------------------------------------------------------------
@@ -43,13 +44,13 @@ Parameters
 sample : 2-d sequence of float
     Data.
 param : sequence of float
-    The parameters of the :class:`~openturns.StudentCopula`.
+    The parameters of the :class:`openturns.experimental.StudentCopula`.
 
 Returns
 -------
 dist : :class:`~openturns.Uniform`
-    The estimated distribution as a :class:`~openturns.StudentCopula`.
-    In the first usage, the default :class:`~openturns.StudentCopula` distribution is built."
+    The estimated distribution as a :class:`openturns.experimental.StudentCopula`.
+    In the first usage, the default :class:`openturns.experimental.StudentCopula` distribution is built."
 
 // ---------------------------------------------------------------------
 
