Added the non linear system Included Michaël remarks

--- a/python/src/MethodOfMomentsFactory_doc.i.in
+++ b/python/src/MethodOfMomentsFactory_doc.i.in
@@ -14,22 +14,49 @@ Notes
 -----
 This method fits a scalar distribution to data of dimension 1, using the method of moments.
 
-Let :math:`(\vect{x}_1, \dots, \vect{x}_n)` denote the sample, :math:`F_{\vect{\theta}}`
+Let :math:`(\vect{x}_k)_{1 \leq k \leq sampleSize}` be
+the sample, :math:`F_{\vect{\theta}}`
 the  cumulative distribution function we want to fit to the sample,
-and :math:`\vect{\theta} \in  \Theta \subset\Rset^p`  its parameter vector.
+and :math:`\vect{\theta} \in  \Theta \subset\Rset^K`  its parameter vector.
 
-Let :math:`K` denote the number of parameters of the distribution and we assume that 
+Then :math:`K` denotes the number of parameters of the distribution and we assume that
 the :math:`K` first moments of the distribution exist.
 
-Let :math:`(\mu_1, \dots, \mu_K)` denote the :math:`K` first central moments of the sample and
-and :math:`(m_1, \dots, m_K)` those of the parametric model.
-
-The estimator :math:`\hat{\theta}` minimizes the sum of slacks between
-:math:`(\mu_1, \dots, \mu_K)` and :math:`(m_1, \dots, m_K)`. It is defined by:
+Let :math:`(\mu_1, \dots, \mu_K)` those coming from the parametric model which
+can be expressed as a function of the :math:`K` parameters:
 
 .. math::
 
-    \Delta = \argmin_{\vect{\theta} \in \Rset^K} \left[ \dfrac{|\mu_1-m_1|}{\sigma} \right]^2 + \sum_{i=2}^K \left[ \dfrac{|\mu_i|^{1/i}-|m_i|^{1/i}}{\sigma} \right]^2
+    \mu_i =  \Expect{X^i} = g_i(\theta_1, \dots, \theta_K).
+
+
+Let :math:`(\widehat{\mu}_1, \dots, \widehat{\mu}_K)` be the :math:`K` first empirical
+non centered  moments
+evaluated on the sample :math:`(\vect{x}_1, \dots, \vect{x}_\sampleSize)`:
+
+.. math::
+
+    \widehat{\mu}_k = \dfrac{1}{\sampleSize} \sum_{i=1}^\sampleSize x_i^k.
+
+
+Then the estimator :math:`\widehat{\theta} = \left(\widehat{\theta}_1,
+\dots, \widehat{\theta}_K\right)` built by the method of moments is solution of the
+following nonlinear system:
+
+.. math::
+    :label: MethMomSyst
+
+    \widehat{\mu}_1 & =  g_1(\theta_1, \dots, \theta_K) \\
+    \widehat{\mu}_2 & = g_2(\theta_1, \dots, \theta_K) \\
+    \vdots &  \\
+    \widehat{\mu}_K & = g_K(\theta_1, \dots, \theta_K)
+
+To solve the non linear :eq:`MethMomSyst`, OpenTURNS minimizes the sum of slacks between
+:math:`(\mu_1, \dots, \mu_K)` and :math:`(\widehat{\mu}_1, \dots, \widehat{\mu}_K)`. It is defined by:
+
+.. math::
+
+    \widehat{\theta} = \argmin_{\vect{\theta} \in \Rset^K} \left[ \dfrac{|\mu_1-\widehat{\mu}_1|}{\sigma} \right]^2 + \sum_{i=2}^K \left[ \dfrac{|\mu_i|^{1/i}-|\widehat{\mu}_i|^{1/i}}{\sigma} \right]^2
 
 
 See also
