--- a/python/src/SquareMatrix_doc.i.in
+++ b/python/src/SquareMatrix_doc.i.in
@@ -85,12 +85,6 @@ Examples
 %feature("docstring") OT::SquareMatrix::computeEigenValues
 "Compute eigenvalues.
 
-Parameters
-----------
-keep_intact : bool, optional
-    A flag telling whether the present matrix can be overwritten or not.
-    Default is *True* and leaves the present matrix unchanged.
-
 Returns
 -------
 eigenvalues : :class:`~openturns.ComplexCollection`
@@ -109,6 +103,14 @@ Examples
 
 // ---------------------------------------------------------------------
 
+%feature("docstring") OT::SquareMatrix::computeEigenValuesInPlace
+"Compute eigenvalues in place.
+
+Similar to :meth:`computeEigenValues` but the matrix is modified in place to avoid copy.
+"
+
+// ---------------------------------------------------------------------
+
 %feature("docstring") OT::SquareMatrix::computeEV
 "Compute the eigenvalues decomposition (EVD).
 
@@ -121,12 +123,6 @@ size :math:`n` reads:
 
 where :math:`\mat{\Lambda}` is an :math:`n \times n` diagonal matrix and
 :math:`\mat{\Phi}` is an :math:`n \times n` orthogonal matrix.
-
-Parameters
-----------
-keep_intact : bool, optional
-    A flag telling whether the present matrix can be overwritten or not.
-    Default is *True* and leaves the present matrix unchanged.
 
 Returns
 -------
@@ -154,6 +150,15 @@ Examples
 >>> # np.testing.assert_array_almost_equal(Phi * Lambda * inv(Phi), M)"
 
 // ---------------------------------------------------------------------
+
+%feature("docstring") OT::SquareMatrix::computeEVInPlace
+"Compute the eigenvalues decomposition (EVD) in place.
+
+Similar to :meth:`computeEVInPlace` but the matrix is modified in place to avoid copy.
+"
+
+// ---------------------------------------------------------------------
+
 %feature("docstring") OT::SquareMatrix::computeLargestEigenValueModule
 "Compute the largest eigenvalue module.
 
