--- a/python/src/SymmetricMatrix_doc.i.in
+++ b/python/src/SymmetricMatrix_doc.i.in
@@ -52,12 +52,6 @@ and back
 %feature("docstring") OT::SymmetricMatrix::computeEigenValues
 "Compute eigenvalues.
 
-Parameters
-----------
-keep_intact : bool, optional
-    A flag telling whether the present matrix can be overwritten or not.
-    Default is *True* and leaves the present matrix unchanged.
-
 Returns
 -------
 eigenvalues : :class:`~openturns.Point`
@@ -76,6 +70,14 @@ Examples
 
 // ---------------------------------------------------------------------
 
+%feature("docstring") OT::SymmetricMatrix::computeEigenValuesInPlace
+"Compute eigenvalues in place.
+
+Similar to :meth:`computeEigenValues` but the matrix is modified in place to avoid copy.
+"
+
+// ---------------------------------------------------------------------
+
 %feature("docstring") OT::SymmetricMatrix::computeEV
 "Compute the eigenvalues decomposition (EVD).
 
@@ -88,12 +90,6 @@ size :math:`n` reads:
 
 where :math:`\mat{\Lambda}` is an :math:`n \times n` diagonal matrix and
 :math:`\mat{\Phi}` is an :math:`n \times n` orthogonal matrix.
-
-Parameters
-----------
-keep_intact : bool, optional
-    A flag telling whether the present matrix can be overwritten or not.
-    Default is *True* and leaves the present matrix unchanged.
 
 Returns
 -------
@@ -119,6 +115,15 @@ Examples
 >>> np.testing.assert_array_almost_equal(Phi * Lambda * Phi.transpose(), M)"
 
 // ---------------------------------------------------------------------
+
+%feature("docstring") OT::SymmetricMatrix::computeEVInPlace
+"Compute the eigenvalues decomposition (EVD) in place.
+
+Similar to :meth:`computeEV` but the matrix is modified in place to avoid copy.
+"
+
+// ---------------------------------------------------------------------
+
 %feature("docstring") OT::SymmetricMatrix::computeLargestEigenValueModule
 "Compute the largest eigenvalue module.
 
